force-app/main/default/objects/Account/fields/Credit_Terms__c.field-meta.xml
<CustomField>
    <fullName>Credit_Terms__c</fullName>
    <label>Credit Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0.5% 10, Net 30 Days</fullName>
            </value>
            <value>
                <fullName>0.5% 20, Net 30 Days</fullName>
            </value>
            <value>
                <fullName>0.5% 25, Net 45 days</fullName>
            </value>
            <value>
                <fullName>1.5% 10, Net 60 days</fullName>
            </value>
            <value>
                <fullName>1.5% 15, Net 30 days</fullName>
            </value>
            <value>
                <fullName>1.5% 15, Net 60 days</fullName>
            </value>
            <value>
                <fullName>1.5% 15, Net 75 days</fullName>
            </value>
            <value>
                <fullName>1% 10, Net 30 days</fullName>
            </value>
            <value>
                <fullName>1% 10, Net 45 days</fullName>
            </value>
            <value>
                <fullName>1% 10, Net 60 days</fullName>
            </value>
            <value>
                <fullName>1% 15, Net 45 days</fullName>
            </value>
            <value>
                <fullName>1% 15, Net 60 days</fullName>
            </value>
            <value>
                <fullName>1% 15, Net 90 days</fullName>
            </value>
            <value>
                <fullName>1% 20, Net 30 days</fullName>
            </value>
            <value>
                <fullName>1% 20, Net 60 days</fullName>
            </value>
            <value>
                <fullName>1% 20, Net 75 days</fullName>
            </value>
            <value>
                <fullName>1% 20, Net 90 days</fullName>
            </value>
            <value>
                <fullName>1% 3, Net 15 days</fullName>
            </value>
            <value>
                <fullName>1% Net 30 Days</fullName>
            </value>
            <value>
                <fullName>2.5% 10, Net 30 days</fullName>
            </value>
            <value>
                <fullName>2.5% 15, Net 45 days</fullName>
            </value>
            <value>
                <fullName>2.5% 15, Net 60 days</fullName>
            </value>
            <value>
                <fullName>2.5% 15, Net 75 days</fullName>
            </value>
            <value>
                <fullName>2% 10, Net 15 days</fullName>
            </value>
            <value>
                <fullName>2% 10, Net 30 Days</fullName>
            </value>
            <value>
                <fullName>2% 10, Net 45 days</fullName>
            </value>
            <value>
                <fullName>2% 10, Net 60 days</fullName>
            </value>
            <value>
                <fullName>2% 10, Net 90 days</fullName>
            </value>
            <value>
                <fullName>2% 15, Net 120 days</fullName>
            </value>
            <value>
                <fullName>2% 15, Net 30 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>