force-app/main/default/objects/Account/fields/CS_EPA_ID__c.field-meta.xml
<CustomField>
    <fullName>CS_EPA_ID__c</fullName>
    <inlineHelpText>The following fields are required in order to validate the EPA Id in addition to the EPA Id field. 
-Corporate Street 
-Corporate State 
-Corporate Country 
-Generator Status 
-Primary Service Provider</inlineHelpText>
    <label>EPA ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>