force-app/main/default/objects/Account/fields/Current_Year_Corp_Key_Budget__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Corp_Key_Budget__c</fullName>
    <label>Current Year Corp/Key $ Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>