force-app/main/default/objects/Account/fields/Current_Year_Corp_Key_Oil_Gallon_Budget__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Corp_Key_Oil_Gallon_Budget__c</fullName>
    <label>Current Year Corp/Key Oil Gallon Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>