force-app/main/default/objects/Account/fields/Current_Year_Location_Gallons_Collected__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Location_Gallons_Collected__c</fullName>
    <label>Current Year Location Gallons Collected</label>
    <summarizedField>Financials__c.Location_Oil_Gallons_Collected__c</summarizedField>
    <summaryFilterItems>
        <field>Financials__c.Account_Revenue_Rollup__c</field>
        <operation>equals</operation>
        <value>Current Year</value>
    </summaryFilterItems>
    <summaryForeignKey>Financials__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>