force-app/main/default/objects/Account/fields/Customer_Chain_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Chain_ID__c</fullName>
    <label>Customer Chain ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>