force-app/main/default/objects/Account/fields/Customer_Engagement_Manager__c.field-meta.xml
<CustomField>
    <fullName>Customer_Engagement_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Engagement Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsK11U</relationshipName>
    <type>Lookup</type>
</CustomField>