force-app/main/default/objects/Account/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <label>Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Archive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>