force-app/main/default/objects/Account/fields/D_B_Control__c.field-meta.xml
<CustomField>
    <fullName>D_B_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is part of a solution to control the accounts captured by the D&amp;B Connect managed app.</description>
    <inlineHelpText>If the field is checked then the account will be picked up by the D&amp;B Connect managed app.</inlineHelpText>
    <label>D&amp;B Control</label>
    <type>Checkbox</type> 
</CustomField>