force-app/main/default/objects/Account/fields/D_B_Industry_Classification__c.field-meta.xml
<CustomField>
    <fullName>D_B_Industry_Classification__c</fullName>
    <label>D&amp;B Industry Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>