force-app/main/default/objects/Account/fields/D_B_Operating_Status__c.field-meta.xml
<CustomField>
    <fullName>D_B_Operating_Status__c</fullName>
    <label>D&amp;B Operating Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>