force-app/main/default/objects/Account/fields/D_B_Ownership_Control_Type__c.field-meta.xml
<CustomField>
    <fullName>D_B_Ownership_Control_Type__c</fullName>
    <label>D&amp;B Ownership Control Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>