force-app/main/default/objects/Account/fields/D_B_SIC_Description__c.field-meta.xml
<CustomField>
    <fullName>D_B_SIC_Description__c</fullName>
    <label>D&amp;B SIC Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>