force-app/main/default/objects/Account/fields/Date_Won__c.field-meta.xml
<CustomField>
    <fullName>Date_Won__c</fullName>
    <label>Date Won</label>
    <type>Date</type>
</CustomField>