force-app/main/default/objects/Account/fields/Days_Since_AP_Contact_Verified__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_AP_Contact_Verified__c</fullName>
    <formula>IF(
    ISBLANK(AP_Contact_Verified_Date__c),
    NULL,
    TODAY() - DATEVALUE(AP_Contact_Verified_Date__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since AP Contact Verified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>