force-app/main/default/objects/Account/fields/Days_Since_Main_Contact_Verified__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Main_Contact_Verified__c</fullName>
    <formula>IF(
    ISBLANK(Main_Contact_Verified_Date__c),
    NULL,
    TODAY() - DATEVALUE(Main_Contact_Verified_Date__c)
)</formula>
    <label>Days Since Main Contact Verified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>