force-app/main/default/objects/Account/fields/DEA_Address1__c.field-meta.xml
<CustomField>
    <fullName>DEA_Address1__c</fullName>
    <label>DEA Address1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>