force-app/main/default/objects/Account/fields/DEA_Address2__c.field-meta.xml
<CustomField>
    <fullName>DEA_Address2__c</fullName>
    <label>DEA Address2</label>
    <length>60</length>
    <type>Text</type>
</CustomField>