force-app/main/default/objects/Account/fields/DEA_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>DEA_Address_ID__c</fullName>
    <label>DEA Address ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>