force-app/main/default/objects/Account/fields/DEA_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>DEA_Country_Code__c</fullName>
    <label>DEA Country</label>
    <length>4</length>
    <type>Text</type>
</CustomField>