force-app/main/default/objects/Account/fields/DEA_Locality1__c.field-meta.xml
<CustomField>
    <fullName>DEA_Locality1__c</fullName>
    <label>DEA City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>