force-app/main/default/objects/Account/fields/DEA_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>DEA_Post_Code__c</fullName>
    <label>DEA Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>