force-app/main/default/objects/Account/fields/DEA_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>DEA_Region_Code__c</fullName>
    <label>DEA State</label>
    <length>4</length>
    <type>Text</type>
</CustomField>