force-app/main/default/objects/Account/fields/Diversity_Organization_Detail__c.field-meta.xml
<CustomField>
    <fullName>Diversity_Organization_Detail__c</fullName>
    <label>Diversity Organization Detail</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>People with Disabilities</fullName>
            </value>
            <value>
                <fullName>Minorities</fullName>
            </value>
            <value>
                <fullName>Women</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>