force-app/main/default/objects/Account/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>The account&apos;s department or division gets stored in this field</description>
    <label>Division Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>