force-app/main/default/objects/Account/fields/Division_ID__c.field-meta.xml
<CustomField>
    <fullName>Division_ID__c</fullName>
    <label>Division ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>