force-app/main/default/objects/Account/fields/dnb_exclude_company__c.field-meta.xml
<CustomField>
    <fullName>dnb_exclude_company__c</fullName>
    <description>When the checkbox is checked this account will NOT be picked up by the D&amp;B Connect managed app.</description>
    <formula>NOT(D_B_Control__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>When the checkbox is checked this account will NOT be picked up by the D&amp;B Connect managed app.</inlineHelpText>
    <label>Exclude from D&amp;B Connect</label>
    <type>Checkbox</type> 
</CustomField>