force-app/main/default/objects/Account/fields/Dual_Corp_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Dual_Corp_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dual Corp Account Owner</label> 
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts8</relationshipName>
    <type>Lookup</type> 
</CustomField>