force-app/main/default/objects/Account/fields/dunbrdst__c.field-meta.xml
<CustomField>
    <fullName>dunbrdst__c</fullName>
    <description>dunbrdst from Beacon for Key Accounts</description>
    <externalId>true</externalId>
    <label>dunbrdst</label>
    <length>10</length>
    <type>Text</type>
</CustomField>