force-app/main/default/objects/Account/fields/Dunbrdst_Reference__c.field-meta.xml
<CustomField>
    <fullName>Dunbrdst_Reference__c</fullName>
    <formula>IF(RecordType.Name = &apos;Customer Location&apos;, Parent.Parent.dunbrdst__c, 
IF(RecordType.Name = &apos;Broker Location&apos;, Parent.Parent.dunbrdst__c, 
IF(RecordType.Name = &apos;Distributor Location&apos;, Parent.Parent.dunbrdst__c, 
IF(RecordType.Name = &apos;Chain&apos;, Parent.dunbrdst__c, 
IF(RecordType.Name = &apos;Distributor&apos;, Parent.dunbrdst__c, 
IF(RecordType.Name = &apos;Broker&apos;, Parent.dunbrdst__c, 
IF(RecordType.Name = &apos;Customer Chain&apos;, Parent.dunbrdst__c, 
IF(RecordType.Name = &apos;Customer&apos;, Parent.dunbrdst__c, dunbrdst__c ))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dunbrdst Reference</label>
    <type>Text</type>
</CustomField>