force-app/main/default/objects/Account/fields/DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number__c</fullName>
    <description>Dun and Bradstreet company ID</description>
    <label>zOld_DUNS_Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>