force-app/main/default/objects/Account/fields/DUNS_Numbers__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Numbers__c</fullName>
    <label>DUNS Number</label>
    <length>255</length>
    <type>Text</type> 
</CustomField>