force-app/main/default/objects/Account/fields/Duplicate_Reason__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Reason__c</fullName>
    <label>Duplicate Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Different Customer Budgets</fullName>
            </value>
            <value>
                <fullName>Movement of Related Data</fullName>
            </value>
            <value>
                <fullName>Unique Invoice Delivery Methods</fullName>
            </value>
            <value>
                <fullName>Acquisitions Limitation</fullName>
            </value>
            <value>
                <fullName>Unique Customer Part Numbers</fullName>
            </value>
            <value>
                <fullName>Contractor Relationships</fullName>
            </value>
            <value>
                <fullName>Pricing Contract Limitations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>