force-app/main/default/objects/Account/fields/E_Manifest_Authority_to_Sign__c.field-meta.xml
<CustomField> 
    <fullName>E_Manifest_Authority_to_Sign__c</fullName>
    <description>This field is dependent on E_Manifest_Delegation__c. If user select E_Manifest_Delegation__c value, then only field will be use.</description>
    <label>E-Manifest Authority to Sign</label> 
    <type>Picklist</type>
    <valueSet>
        <controllingField>E_Manifest_Delegation__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>