force-app/main/default/objects/Account/fields/E_Manifest_Delegation__c.field-meta.xml
<CustomField>
    <fullName>E_Manifest_Delegation__c</fullName>
    <inlineHelpText>Indication that E-Manifest Delegation has been signed. HWP = Hazardous Waste Program</inlineHelpText>
    <label>E-Manifest Delegation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HWP Partial</fullName>
				<isActive>false</isActive>
                <label>HWP Partial - Signing Authority</label>
            </value>
            <value>
                <fullName>HWP Partial - No Signing Authority</fullName> 
				<isActive>false</isActive>
                <label>HWP Partial - No Signing Authority</label>
            </value>
            <value>
                <fullName>HWP Full</fullName>
				<isActive>false</isActive>
                <label>HWP Full</label>
            </value>
			<value>
                <fullName>HWP – Non-delegate</fullName>
            </value>
            <value>
                <fullName>HWP – Partial Delegate</fullName>
            </value>
            <value>
                <fullName>HWP – Full Delegate</fullName> 
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>