force-app/main/default/objects/Account/fields/EC_Tier__c.field-meta.xml
<CustomField>
    <fullName>EC_Tier__c</fullName>
    <label>E&amp;C Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>