force-app/main/default/objects/Account/fields/Enterprise_Account__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If flagged is considered an Enterprise Account</description>
    <label>Enterprise Account</label>
    <type>Checkbox</type>
</CustomField>