force-app/main/default/objects/Account/fields/EPA_Service_Call__c.field-meta.xml
<CustomField>
    <fullName>EPA_Service_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags when Epa service call is made</description>
    <label>EPA Service Call</label>
    <type>Checkbox</type>
</CustomField>