force-app/main/default/objects/Account/fields/Existing_Customer_Validated__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Customer Validated</label>
    <type>Checkbox</type>
</CustomField>