force-app/main/default/objects/Account/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flag identifies if this account is archived</inlineHelpText>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>