force-app/main/default/objects/Account/fields/Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>Expired_Date__c</fullName>
    <label>Expired Date</label>
    <type>DateTime</type>
</CustomField>