force-app/main/default/objects/Account/fields/Expires_On__c.field-meta.xml
<CustomField>
    <fullName>Expires_On__c</fullName>
    <description>Expire the Alert on this Date</description>
    <label>Expires On</label>
    <type>Date</type>
</CustomField>