force-app/main/default/objects/Account/fields/Full_Time_Part_Time__c.field-meta.xml
<CustomField>
    <fullName>Full_Time_Part_Time__c</fullName>
    <label>Full Time/Part Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>DOW</fullName>
            </value>
            <value>
                <fullName>P66</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>