force-app/main/default/objects/Account/fields/Generator_Status__c.field-meta.xml
<CustomField>
    <fullName>Generator_Status__c</fullName>
	<inlineHelpText>An account&apos;s generator status can only be upgraded from Salesforce. Downgrades in this area need to be coordinated by our compliance team. For status downgrades, please submit a Service Now ticket using category/subcategory: WIN-Aurora(FocalPoint), CWT-Compliance or WIN-Compliance, EPA ID Number.</inlineHelpText>
    <label>Generator Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Large Quantity Generator</fullName>
            </value>
            <value>
                <fullName>Small Quantity Generator</fullName>
            </value>
            <value>
                <fullName>Conditionally Exempt Sm Qty Generator</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
                <default>true</default>
                <label>Undetermined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>