force-app/main/default/objects/Account/fields/GENREG__c.field-meta.xml
<CustomField>
    <fullName>GENREG__c</fullName>
    <label>GenReg Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>