force-app/main/default/objects/Account/fields/Growth_Account__c.field-meta.xml
<CustomField>
    <fullName>Growth_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indication that this account is a growth account for CEC</description>
    <label>2017 Growth Account</label>
    <type>Checkbox</type>
</CustomField>