force-app/main/default/objects/Account/fields/Headline_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Headline_Expiration__c</fullName>
	<description>This field is used to show the visibility of account banner.</description>
    <label>Headline Expiration</label>
    <type>Date</type>
</CustomField>