force-app/main/default/objects/Account/fields/Headline_Expiration_Formula__c.field-meta.xml
<CustomField>
    <fullName>Headline_Expiration_Formula__c</fullName>
    <description>This field is used to hide Account headline banner on account flexy page.</description>
    <formula>OR(Headline_Expiration__c &lt;= Today(), ISBLANK(Account_Headline__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Headline Expiration Formula</label>
    <type>Checkbox</type>
</CustomField>