force-app/main/default/objects/Account/fields/High_Priority__c.field-meta.xml
<CustomField>
    <fullName>High_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is for Kafka to pickup records and split into streams</description>
    <label>High Priority</label>
    <type>Checkbox</type> 
</CustomField>