force-app/main/default/objects/Account/fields/Hybrid_Central_LOBs__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_Central_LOBs__c</fullName>
    <label>Hybrid Central LOBs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Buying_Decision__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Allied</fullName>
            </value>
            <value>
                <fullName>Antifreeze</fullName>
            </value>
            <value>
                <fullName>Blended Oil Sales – Direct</fullName>
            </value>
            <value>
                <fullName>CleanPack</fullName>
            </value>
            <value>
                <fullName>Containerized Waste</fullName>
            </value>
            <value>
                <fullName>Emergency Response</fullName>
            </value>
            <value>
                <fullName>Field Services</fullName>
            </value>
            <value>
                <fullName>Oil Filter Recycling</fullName>
            </value>
            <value>
                <fullName>Oily Water</fullName>
            </value>
            <value>
                <fullName>Parts Washer</fullName>
            </value>
            <value>
                <fullName>UMO</fullName>
            </value>
            <value>
                <fullName>Vac Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>