force-app/main/default/objects/Account/fields/Inactivate_Reactivate_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Inactivate_Reactivate_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to track whether any active case is pending on Account through Inactivate Account and Reactivate Account quick links</description>
    <label>Inactivate/Reactivate In Progress</label>
    <type>Checkbox</type>
</CustomField>