force-app/main/default/objects/Account/fields/Include_for_EPI_Oil_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Include_for_EPI_Oil_Gallons__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate where a national account or chain should be included in the EPI Oil Gallons</description>
    <label>Include for EPI Oil Gallons</label>
    <type>Checkbox</type>
</CustomField>