force-app/main/default/objects/Account/fields/Include_for_EPI_Oil_Gallons_Flag__c.field-meta.xml
<CustomField>
    <fullName>Include_for_EPI_Oil_Gallons_Flag__c</fullName>
    <formula>if ( isblank(Key_Account_Name__c),true,
IF(RecordType.Name = &apos;Customer Location&apos;, Parent.Parent.Include_for_EPI_Oil_Gallons__c , 
IF(RecordType.Name = &apos;Customer&apos;, Parent.Include_for_EPI_Oil_Gallons__c,
IF(RecordType.Name = &apos;Chain&apos;, Include_for_EPI_Oil_Gallons__c,
False))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include for EPI Oil Gallons Flag</label>
    <type>Checkbox</type>
</CustomField>