force-app/main/default/objects/Account/fields/Industrial_Division__c.field-meta.xml
<CustomField>
    <fullName>Industrial_Division__c</fullName>
    <description>This field is used to differentiate the data points Radius, SAP, HubSpot, WIN, and Salesforce that are critical to continuity and deduplication.</description>
    <label>Industrial Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>